Room model CRUD added

--- a/Phase3/RoomReservation/templates/main_page.html
+++ b/Phase3/RoomReservation/templates/main_page.html
@@ -15,6 +15,15 @@
         <li><a href="{% url 'organization_list' %}">Organization List</a></li>
         <li><a href="{% url 'create_organization' %}">Create New Organization</a></li>
     </ul>
+
+    <h2>Rooms:</h2>
+    <ul>
+        <li><a href="{% url 'room_list' %}">Room List</a></li>
+        <li><a href="{% url 'create_room' %}">Create New Room</a></li>
+    </ul>
+
+    <!-- Add similar sections for other models as needed -->
+
 </body>
 
 </html>
