--- a/Phase3/RoomReservation/templates/main_page.html
+++ b/Phase3/RoomReservation/templates/main_page.html
@@ -22,6 +22,12 @@
         <li><a href="{% url 'create_room' %}">Create New Room</a></li>
     </ul>
 
+    <h2>Events:</h2>
+    <ul>
+        <li><a href="{% url 'event_list' %}">Event List</a></li>
+        <li><a href="{% url 'create_event' %}">Create New Event</a></li>
+    </ul>
+
     <!-- Add similar sections for other models as needed -->
 
 </body>
