UserPermissionForOrganization model CRUD added

--- a/Phase3/RoomReservation/templates/main_page.html
+++ b/Phase3/RoomReservation/templates/main_page.html
@@ -28,6 +28,13 @@
         <li><a href="{% url 'create_event' %}">Create New Event</a></li>
     </ul>
 
+    <h2>User Permissions for Organizations:</h2>
+    <ul>
+        <li><a href="{% url 'user_permission_for_organization_list' %}">User Permissions for Organization List</a></li>
+        <li><a href="{% url 'create_user_permission_for_organization' %}">Create New User Permission for
+                Organization</a></li>
+    </ul>
+
     <!-- Add similar sections for other models as needed -->
 
 </body>
