UserPermissionForRoom model CRUD added

--- a/Phase3/RoomReservation/templates/main_page.html
+++ b/Phase3/RoomReservation/templates/main_page.html
@@ -35,6 +35,12 @@
                 Organization</a></li>
     </ul>
 
+    <h2>User Permissions for Rooms:</h2>
+    <ul>
+        <li><a href="{% url 'user_permission_for_room_list' %}">User Permissions for Room List</a></li>
+        <li><a href="{% url 'create_user_permission_for_room' %}">Create New User Permission for Room</a></li>
+    </ul>
+
     <!-- Add similar sections for other models as needed -->
 
 </body>
