--- a/Phase3/RoomReservation/templates/room_list.html
+++ b/Phase3/RoomReservation/templates/room_list.html
@@ -12,7 +12,7 @@
     <ul>
         {% for room in rooms %}
         <li>
-            {{ room.name }} - {{ room.owner.username }}
+            Room: {{ room.name }} - Organization: {{ room.organization.name }} - Owner: {{ room.owner.username }}
             [<a href="{% url 'delete_room' room.id %}">Delete</a>]
         </li>
         {% endfor %}
